App Architecture built2 with home

--- a/SmartSales/app/src/main/res/layout/activity_sign_up.xml
+++ b/SmartSales/app/src/main/res/layout/activity_sign_up.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/welcome_bg"
-    tools:context="com.hyundai.teli.smartsales.activities.SignUpActivity">
+    tools:context="com.hyundai.teli.smartsales.activities.SignUp">
 
     <View
         android:id="@+id/center_line"
