--- a/SmartSales/app/src/main/res/layout/activity_home.xml
+++ b/SmartSales/app/src/main/res/layout/activity_home.xml
@@ -1,148 +1,93 @@
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.hyundai.teli.smartsales.activities.HomeActivity">
+    android:layout_height="match_parent" >
 
-    <android.support.v7.widget.Toolbar
+    <VideoView
+        android:id="@+id/movie"
         android:layout_width="fill_parent"
+        android:layout_height="fill_parent" />
+
+    <View
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:background="@drawable/bg_net" />
+
+    <ImageView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/action_bar_bg"
-        android:id="@+id/view"
-        android:layout_toEndOf="@+id/hyundai_bar"
-        android:layout_toRightOf="@+id/hyundai_bar">
+        android:layout_marginLeft="40dp"
+        android:layout_marginTop="27dp"
+        android:background="@android:color/transparent"
+        android:src="@drawable/gateway_logo" />
 
-        <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:orientation="horizontal">
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:gravity="center"
+        android:orientation="horizontal" >
 
-        <com.hyundai.teli.smartsales.views.HTextView
-            android:id="@+id/show_room"
-            android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
-            android:text="SHOWROOM"
-            android:textColor="@android:color/white"
-            android:layout_gravity="center"
-            android:gravity="center"
-            android:layout_weight="1"/>
-
-        <com.hyundai.teli.smartsales.views.HTextView
-            android:id="@+id/estimate"
-            android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
-            android:text="ESTIMATE"
-            android:textColor="@android:color/white"
-            android:layout_gravity="center"
-            android:gravity="center"
-            android:layout_weight="1"/>
-
-        <com.hyundai.teli.smartsales.views.HTextView
-            android:id="@+id/photo"
-            android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
-            android:text="PHOTO"
-            android:textColor="@android:color/white"
-            android:layout_gravity="center"
-            android:gravity="center"
-            android:layout_weight="1"/>
-
-        <ImageView
-            android:id="@+id/settings"
+        <ImageButton
+            android:id="@+id/brand_story"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/btn_overflow_setting"
-            android:layout_weight="1"
-            />
+            android:background="@android:color/transparent"
+            android:src="@drawable/btn_gateway_hmc_normal" />
 
-        </LinearLayout>
+        <ImageButton
+            android:id="@+id/consultation"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="6dp"
+            android:layout_marginRight="6dp"
+            android:background="@android:color/transparent"
+            android:src="@drawable/btn_gateway_showroom_normal" />
 
-    </android.support.v7.widget.Toolbar>
+        <ImageButton
+            android:id="@+id/nde"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@android:color/transparent"
+            android:src="@drawable/btn_gateway_nde_normal" />
 
-    <ImageView
-        android:id="@+id/catalogueMenu"
+        <ImageButton
+            android:id="@+id/message_board"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="6dp"
+            android:background="@android:color/transparent"
+            android:src="@drawable/btn_gateway_message_normal" />
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/menu_icon"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignBottom="@+id/view" />
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="69dp"
+        android:layout_marginBottom="52dp"
+        android:orientation="horizontal" >
 
-    <ImageView
-        android:id="@+id/hyundai_bar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/gateway_header"
-        android:background="@drawable/action_bar_bg"
-        android:layout_alignParentTop="true"
-        android:layout_alignBottom="@+id/catalogueMenu"
-        android:layout_toRightOf="@+id/catalogueMenu"
-        android:layout_toEndOf="@+id/catalogueMenu"
-        android:paddingLeft="30dp"/>
+        <ImageButton android:id="@+id/myInfo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/btn_my_info"
+            android:background="@android:color/transparent" />
 
-    <FrameLayout
-        android:id="@+id/frame_container"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/catalogueMenu"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
-    </FrameLayout>
+        <ImageButton android:id="@+id/customer_management"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/btn_customer"
+            android:background="@android:color/transparent"
+            android:layout_marginLeft="6dp"
+            android:layout_marginRight="6dp" />
 
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/menuListView"
-        android:visibility="gone"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignTop="@+id/frame_container"
-        android:layout_toLeftOf="@+id/hyundai_bar"
-        android:layout_toStartOf="@+id/hyundai_bar">
-
-        <ImageView
-            android:id="@+id/menuHome"
-            android:layout_width="130px"
-            android:layout_height="130px"
-            android:src="@drawable/home"
-            android:scaleType="fitXY"/>
-
-        <ImageView
-            android:id="@+id/menuCatalog"
-            android:layout_width="130px"
-            android:layout_height="130px"
-            android:scaleType="fitXY"
-            android:src="@drawable/catalogue"
-            android:layout_below="@+id/menuHome"/>
-
-        <ImageView
-            android:id="@+id/menuDealerLocation"
-            android:layout_width="130px"
-            android:layout_height="130px"
-            android:scaleType="fitXY"
-            android:src="@drawable/dealer_location"
-            android:layout_below="@+id/menuCatalog"/>
-
-        <ImageView
-            android:id="@+id/menuRequestTD"
-            android:layout_width="130px"
-            android:layout_height="130px"
-            android:scaleType="fitXY"
-            android:src="@drawable/test_drive"
-            android:layout_below="@+id/menuDealerLocation"/>
-
-        <ImageView
-            android:id="@+id/menuGame"
-            android:layout_width="130px"
-            android:layout_height="130px"
-            android:scaleType="fitXY"
-            android:src="@drawable/game"
-            android:layout_below="@+id/menuRequestTD"/>
-    </RelativeLayout>
-
-
-
+        <ImageButton android:id="@+id/survey"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/btn_survey"
+            android:background="@android:color/transparent" />
+    </LinearLayout>
 
 </RelativeLayout>
