--- a/SmartSales/app/src/main/res/layout/activity_brand_story.xml
+++ b/SmartSales/app/src/main/res/layout/activity_brand_story.xml
@@ -6,7 +6,16 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.hyundai.teli.smartsales.activities.BrandStory">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
+    <TextView android:text="@string/hello_world"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
+
+    <android.support.v4.view.ViewPager
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/brand_pager"
+        android:layout_width="600dp"
+        android:layout_height="500dp"
+
+        />
 
 </RelativeLayout>
