--- a/SmartSales/app/src/main/res/layout/activity_brand_story.xml
+++ b/SmartSales/app/src/main/res/layout/activity_brand_story.xml
@@ -1,21 +1,44 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@drawable/bg_consultation"
     tools:context="com.hyundai.teli.smartsales.activities.BrandStory">
 
-    <TextView android:text="@string/hello_world"
+    <android.support.v7.widget.Toolbar
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/action_bar_bg"
+        android:id="@+id/view"
+        android:layout_toEndOf="@+id/catalogueMenu"
+        android:layout_toRightOf="@+id/catalogueMenu">
+
+        <com.hyundai.teli.smartsales.views.HTextView
+            android:id="@+id/show_room"
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
+            android:text="@string/title_activity_brand_story"
+            android:textColor="@android:color/white"
+            android:gravity="center"
+           android:layout_weight="1"/>
+
+        </android.support.v7.widget.Toolbar>
+    <ImageView
+        android:id="@+id/catalogueMenu"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:background="@drawable/menu_icon"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignBottom="@+id/view" />
+
+
 
     <android.support.v4.view.ViewPager
-        xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/brand_pager"
-        android:layout_width="600dp"
-        android:layout_height="500dp"
-
-        />
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_below="@+id/view" />
 
 </RelativeLayout>
