--- a/SmartSales/app/src/main/res/layout/activity_nde.xml
+++ b/SmartSales/app/src/main/res/layout/activity_nde.xml
@@ -1,12 +1,106 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.hyundai.teli.smartsales.activities.NDE">
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@drawable/bg_consultation"
+    tools:context="com.hyundai.teli.smartsales.activities.Home">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <android.support.v7.widget.Toolbar
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/action_bar_bg"
+        android:id="@+id/view"
+        android:layout_toEndOf="@+id/hyundai_bar"
+        android:layout_toRightOf="@+id/hyundai_bar">
+
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:orientation="horizontal">
+
+            <com.hyundai.teli.smartsales.views.HTextView
+                android:id="@+id/nde_video"
+                android:layout_width="wrap_content"
+                android:layout_height="fill_parent"
+                android:text="NDE VIDEO"
+                android:textColor="@android:color/white"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:layout_weight="1"/>
+
+            <com.hyundai.teli.smartsales.views.HTextView
+                android:id="@+id/nde_dealer_v"
+                android:layout_width="wrap_content"
+                android:layout_height="fill_parent"
+                android:text="DEALER VISION AND MISSION"
+                android:textColor="@android:color/white"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:layout_weight="1"/>
+
+            <com.hyundai.teli.smartsales.views.HTextView
+                android:id="@+id/nde_sales"
+                android:layout_width="wrap_content"
+                android:layout_height="fill_parent"
+                android:text="NDE SALES PROCESS"
+                android:textColor="@android:color/white"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:layout_weight="1"/>
+
+            <com.hyundai.teli.smartsales.views.HTextView
+                android:id="@+id/nde_dealer_experience"
+                android:layout_width="wrap_content"
+                android:layout_height="fill_parent"
+                android:text="NEW DEALERSHIP EXPERIENCE"
+                android:textColor="@android:color/white"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:layout_weight="1"/>
+
+        </LinearLayout>
+
+    </android.support.v7.widget.Toolbar>
+
+    <ImageView
+        android:id="@+id/catalogueMenu"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/menu_icon"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignBottom="@+id/view" />
+
+    <com.hyundai.teli.smartsales.views.HTextView
+        android:id="@+id/hyundai_bar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="NEW DEALERSHIP EXPERIENCE"
+        android:textColor="@android:color/white"
+        android:layout_gravity="center"
+        android:background="@drawable/action_bar_bg"
+        android:gravity="center"
+        android:textSize="20sp"
+        android:layout_alignParentTop="true"
+        android:layout_alignBottom="@+id/catalogueMenu"
+        android:layout_toRightOf="@+id/catalogueMenu"
+        android:layout_toEndOf="@+id/catalogueMenu"
+        android:paddingLeft="15dp"/>
+
+    <FrameLayout
+        android:id="@+id/frame_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/catalogueMenu"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
+    </FrameLayout>
+
+    <include layout="@layout/menu_layout"/>
+
+
+
 
 </RelativeLayout>
