--- a/SmartSales/app/src/main/res/layout/videoplay.xml
+++ b/SmartSales/app/src/main/res/layout/videoplay.xml
@@ -6,8 +6,8 @@
     android:background="#000000">
 
     <VideoView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
         android:layout_centerHorizontal="true"
         android:id="@+id/videoPlay"/>
 
