Implemented Settings UI and Showroom UI

--- a/SmartSales/app/src/main/res/drawable/btn_overflow_setting.xml
+++ b/SmartSales/app/src/main/res/drawable/btn_overflow_setting.xml
@@ -3,7 +3,10 @@
     
     <item android:drawable="@drawable/btn_setting_selected"
         android:state_pressed="true"/>
-    
+
+    <item android:drawable="@drawable/btn_setting_selected"
+        android:state_selected="true"/>
+
     <item android:drawable="@drawable/btn_setting_normal"/>
     
 </selector>
