--- a/SmartSales/app/src/main/res/layout/fragment_settings.xml
+++ b/SmartSales/app/src/main/res/layout/fragment_settings.xml
@@ -112,7 +112,7 @@
 
     </LinearLayout>
 
-    <FrameLayout
+    <android.support.v4.view.ViewPager
         android:id="@+id/settings_container"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
