--- a/SmartSales/app/src/main/res/values/styles.xml
+++ b/SmartSales/app/src/main/res/values/styles.xml
@@ -29,4 +29,10 @@
         <item name="android:textStyle">bold</item>
     </style>
 
+    <style name="survey_text">
+        <item name="android:textColor">#808080</item>
+        <item name="android:textSize">26sp</item>
+        <item name="android:layout_marginTop">25dp</item>
+    </style>
+
 </resources>
