--- a/SmartSales/app/src/main/res/layout/activity_sign_up.xml
+++ b/SmartSales/app/src/main/res/layout/activity_sign_up.xml
@@ -15,7 +15,7 @@
 
     <ImageView
         android:id="@+id/pic_view"
-        android:layout_width="wrap_content"
+        android:layout_width="230dp"
         android:layout_height="wrap_content"
         android:src="@drawable/pic_view"
         android:scaleType="fitXY"
