--- a/SmartSales/app/src/main/res/layout/fragment_new_sales.xml
+++ b/SmartSales/app/src/main/res/layout/fragment_new_sales.xml
@@ -6,12 +6,9 @@
     android:background="@drawable/settings_bg">
 
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="NEW SALES"
-        android:id="@+id/textView"
-        android:textSize="30sp"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
+    <android.support.v4.view.ViewPager
+        android:id="@+id/nde_sales_pager"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        />
 </RelativeLayout>
