--- a/SmartSales/app/src/main/res/layout/activity_nde.xml
+++ b/SmartSales/app/src/main/res/layout/activity_nde.xml
@@ -89,14 +89,14 @@
         android:layout_toEndOf="@+id/catalogueMenu"
         android:paddingLeft="15dp"/>
 
-    <FrameLayout
-        android:id="@+id/frame_container"
+    <android.support.v4.view.ViewPager
+        android:id="@+id/pager_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/catalogueMenu"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true">
-    </FrameLayout>
+    </android.support.v4.view.ViewPager>
 
     <include layout="@layout/menu_layout"/>
 
