--- a/SmartSales/app/src/main/res/layout/fragment_my_info.xml
+++ b/SmartSales/app/src/main/res/layout/fragment_my_info.xml
@@ -10,6 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
+        android:layout_marginTop="100dp"
         >
 
         <View
@@ -150,6 +151,7 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_weight="1"
+        android:layout_marginTop="100dp"
         >
 
         <ImageView
@@ -222,10 +224,10 @@
                 android:textSize="16sp" />
         </LinearLayout>
 
-        <Button
+        <ImageButton
             android:layout_width="150dp"
             android:layout_height="wrap_content"
-            android:text="Full Screen"
+            android:background="@drawable/btn_full_screen_normal"
             android:id="@+id/button2"
             android:paddingLeft="5dp"
             android:paddingRight="5dp"
